@@ -1,4 +1,5 @@
 4.3.1
+	Make sure dump is really on disk even with a buggy ext4fs
 	Build with OpenLDAP but not CURL (Matthias Scheler)
 	Do not complain about unreachable p0f daemon if it is unconfigured
 	Fix buffer overflow in SpamAssassin support (Enrico Scholz)
